fix(layout): restore full-height panels on mobile/HiDPI

--- a/src/pages/ConfigPage.module.scss
+++ b/src/pages/ConfigPage.module.scss
@@ -3,6 +3,7 @@
 .container {
   width: 100%;
   height: 100%;
+  flex: 1;
   display: flex;
   flex-direction: column;
   min-height: 0;
